--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,7 @@
             android:name=".ui.setting.SettingActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.favorite.FavoriteActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.detail.DetailActivity"
+            android:name=".favorite.FavoriteActivity"
             android:exported="false" />
         <activity
             android:name=".ui.main.MainActivity"
