--- a/shared_dependencies.gradle
+++ b/shared_dependencies.gradle
@@ -12,6 +12,9 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
     implementation("androidx.datastore:datastore-preferences:1.0.0")
     ksp("androidx.room:room-compiler:2.6.1")
+    implementation ("io.insert-koin:koin-core:3.3.2")
+    implementation ("io.insert-koin:koin-android:3.3.2")
+    implementation ("com.squareup.retrofit2:adapter-rxjava2:2.9.0")
 
     implementation("androidx.core:core-ktx:1.12.0")
     implementation("androidx.appcompat:appcompat:1.6.1")
