--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
     xmlns:dist="http://schemas.android.com/apk/distribution">
 
     <dist:module
@@ -10,9 +10,5 @@
         </dist:delivery>
         <dist:fusing dist:include="true" />
     </dist:module>
-
-    <application>
-        <activity android:name="com.dicoding.favvie.ui.detail.DetailActivity" />
-    </application>
 
 </manifest>
